# anki_addon_english_vocab

./: README.md  __init__.py  config.json  pyproject.toml
